--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -197,8 +197,7 @@ img {
   max-width: 100%;
 }
 ul.reset,
-ul.reset ul,
-ul.reset li {
+ul.reset > li {
   margin: 0;
   padding: 0;
   list-style: none;
