--- a/src/components/x/dropdown.css
+++ b/src/components/x/dropdown.css
@@ -12,6 +12,7 @@ All right reserved.
   --dropdown-backgroud-color: white;
   --dropdown-box-shadow: var(--shadow-4);
   --dropdown-padding: .8rem;
+  --dropdown-max-width: 28rem;
   --dropdown-item-padding: .6rem 2.4rem .6rem 1.2rem;
   --dropdown-item-font-color: black;
   --dropdown-item-font-color-hover: black;
@@ -21,10 +22,6 @@ All right reserved.
 }
 
 
-.dropdown {
-  position: relative;
-}
-
 [x-dropdown] {
   display: none;
   list-style: none;
@@ -33,7 +30,7 @@ All right reserved.
   z-index: 1000;
   opacity: 0;
   min-width: 22rem;
-  max-width: 32rem;
+  max-width: var(--dropdown-max-width);
   max-height: clamp(0px, 80vh, 500px);
   overflow: auto;
   list-style: none;
@@ -50,8 +47,8 @@ All right reserved.
   pointer-events: none;
   overscroll-behavior: contain;
   
-  &.dropdown_right {
-    right: 0;
+  @media (--medium) {
+    --dropdown-max-width: 32rem;
   }
   
   & > li {
@@ -88,13 +85,26 @@ All right reserved.
   }
 }
 
-.dropdown.dropdown_ready [x-dropdown] {
-  display: block;
-  pointer-events: auto;
-}
-.dropdown.dropdown_open [x-dropdown] {
-  opacity: 1;
-  transform: scale(1);
+.dropdown {
+  position: relative;
+  
+  &.dropdown_right > [x-dropdown] {
+    right: 0;
+    left: auto;
+  }
+  &.dropdown_bottom > [x-dropdown] {
+    bottom: 100%;
+    top: auto;
+    transform-origin: bottom;
+  }
+  &.dropdown_ready > [x-dropdown] {
+    display: block;
+    pointer-events: auto;
+  }
+  &.dropdown_open > [x-dropdown] {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 
 
@@ -115,6 +125,7 @@ All right reserved.
       padding: var(--dropdown-item-padding);
       line-height: 1.4;
       color: var(--dropdown-item-font-color);
+      white-space: nowrap;
       text-overflow: ellipsis;
       text-decoration: none;
       overflow: hidden;
@@ -129,6 +140,7 @@ All right reserved.
       transform: scale(1);
       transform-origin: bottom center;
       
+      &:focus-visible,
       &:hover,
       &:active,
       &.active {
