--- a/src/components/x/helpers.css
+++ b/src/components/x/helpers.css
@@ -324,7 +324,10 @@ html.touch .touch-hide { display: none }
   & > img,
   & > a {
     position: absolute;
-    inset: 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
   & > img {
     object-fit: cover;
