--- a/src/css/x.css
+++ b/src/css/x.css
@@ -20,6 +20,7 @@ All right reserved.
 @import "../components/x/dropdown.css";
 @import "../components/x/sheets.css";
 @import "../components/x/slides.css";
+@import "../components/x/slider.css";
 @import "../components/x/sticky.css";
 @import "../components/x/modal.css";
 @import "../components/x/debug.css";
