--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -34,3 +34,53 @@
 [x-slider] .slider-indicators span.active {
   background: rgba(255,255,255,1);
 }
+
+
+:root {
+  --slides-point-color: #ffffff66;
+  --slides-point-color-active: #fff;
+  --slides-point-size: .3rem;
+  --slides-point-gap: .3rem;
+  --slides-point-top-padding: auto;
+  --slides-point-left-padding: 1.6rem;
+  --slides-point-right-padding: 1.6rem;
+  --slides-point-bottom-padding: 1rem;
+}
+
+
+[x-slider] {
+  position: relative;
+}
+[x-slider] .slider-indicators {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--slides-point-gap);
+  position: absolute;
+  z-index: 10;
+  top: var(--slides-point-top-padding);
+  bottom: var(--slides-point-bottom-padding);
+  left: var(--slides-point-left-padding);
+  right: var(--slides-point-right-padding);
+  height: var(--slides-point-size);
+  opacity: 0;
+  
+  will-change: opacity;
+  transition: opacity .25s ease-out;
+}
+[x-slider] .slider-indicators span {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  width: var(--slides-point-size);
+  height: var(--slides-point-size);
+  border-radius: var(--slides-point-size);
+  background: var(--slides-point-color);
+}
+[x-slider] .slider-indicators span.active {
+  background: var(--slides-point-color-active);
+}
+[x-slider]:hover .slider-indicators {
+  opacity: 1;
+}
