--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -5,7 +5,9 @@
 }
 [x-slider] .slider-wrapper {
   display: flex;
-  transition: transform 0.3s ease-out;
+  /* transition: transform 0.3s ease-out; */
+  will-change: transform;
+  touch-action: pan-y; /* позволяем вертикальный скролл странице */
 }
 [x-slider] .slide {
   min-width: 100%;
@@ -36,7 +38,7 @@
 }
 
 
-:root {
+/* :root {
   --slides-point-color: #ffffff66;
   --slides-point-color-active: #fff;
   --slides-point-size: .3rem;
@@ -83,4 +85,4 @@
 }
 [x-slider]:hover .slider-indicators {
   opacity: 1;
-}
+} */
