--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -15,6 +15,7 @@
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  overscroll-behavior: none;
 }
 .slider-wrapper {
   /* touch-action: pan-y; */
