--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -16,6 +16,12 @@
   overflow: hidden;
   cursor: pointer;
   overscroll-behavior: none;
+  
+  touch-action: pan-y !important; /* явно говорим: вертикальный скролл ок, горизонт тачим сами */
+  -webkit-user-drag: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+  overscroll-behavior: none;
 }
 .slider-wrapper {
   /* touch-action: pan-y; */
