--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -19,8 +19,9 @@
   overscroll-behavior: contain;    /* не отдаём overscroll родителю */
 }
 .slider-wrapper {
-  touch-action: manipulation;
-  contain: strict;
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 .slider-item {
   display: flex;
