--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -19,9 +19,9 @@
   overscroll-behavior: contain;    /* не отдаём overscroll родителю */
 }
 .slider-wrapper {
+  display: flex;
   width: 100%;
   height: 100%;
-  display: flex;
 }
 .slider-item {
   display: flex;
@@ -31,6 +31,7 @@
 }
 .slider-item img {
   width: 100%;
+  max-width: auto;
   height: 100%;
   object-fit: cover;
 }
