--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -29,6 +29,11 @@
   min-width: 100%;
   flex: 0 0 100%,
 }
+.slider-item a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
 .slider-item img {
   width: 100%;
   max-width: auto;
