--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -22,6 +22,10 @@
   display: flex;
   width: 100%;
   height: 100%;
+  pointer-events: auto;
+  will-change: transform;
+  transform: translateZ(0); /* создаёт отдельный композитный слой */
+  backface-visibility: hidden;
 }
 .slider-item {
   display: flex;
@@ -39,6 +43,7 @@
   max-width: auto;
   height: 100%;
   object-fit: cover;
+  pointer-events: auto;
 }
 .slider-indicators {
   display: flex;
