--- a/src/components/x/slider.css
+++ b/src/components/x/slider.css
@@ -40,7 +40,7 @@
 }
 .slider-item img {
   width: 100%;
-  max-width: auto;
+  max-width: none;
   height: 100%;
   object-fit: cover;
   pointer-events: auto;
