--- a/src/components/x/helpers.css
+++ b/src/components/x/helpers.css
@@ -333,7 +333,7 @@ html.touch .touch-hide { display: none }
     height: 100%;
   }
   & > img {
-    object-fit: cover;
+    /* object-fit: cover; */
   }
 }
 
