--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -156,8 +156,8 @@ input[type=button] {
 }
 hr {
   display: block;
-  height: .1em;
-  margin: 1.6em 0;
+  height: .1rem;
+  margin: 1.6rem 0;
   border: none;
   background-color: #88888822;
 }
