--- a/src/components/x/reset.css
+++ b/src/components/x/reset.css
@@ -197,10 +197,15 @@ img {
   max-width: 100%;
 }
 ul.reset,
-ul.reset > li {
+ol.reset {
   margin: 0;
   padding: 0;
   list-style: none;
+  
+  & > li {
+    margin: 0;
+    padding: 0;
+  }
 }
 pre {
   font-family: var(--font-family-mono);
