--- a/src/components/x/modal.css
+++ b/src/components/x/modal.css
@@ -11,9 +11,14 @@ All right reserved.
 
 
 :root {
-  --modal-margin-x: 3vw;
-  --modal-margin-y: 3vw;
-  --modal-padding: clamp(4rem, 4vw, 5rem) clamp(2.5rem, 4vw, 5rem);
+  --modal-margin-top: 3vw;
+  --modal-margin-bottom: 3vw;
+  --modal-margin-left: 3vw;
+  --modal-margin-right: 3vw;
+  --modal-padding-top: clamp(2.5rem, 4vw, 5rem);
+  --modal-padding-bottom: clamp(2.5rem, 4vw, 5rem);
+  --modal-padding-left: clamp(4rem, 4vw, 5rem);
+  --modal-padding-right: clamp(4rem, 4vw, 5rem);
   --modal-background: #fff;
   --modal-box-shadow: 0 1rem 4rem #00000033;
   --modal-border-radius: 1.6rem;
@@ -85,10 +90,10 @@ html.modal_active body {
   z-index: 10020;
   width: 100%;
   height: 100%;
-  padding-left: var(--modal-margin-x);
-  padding-right: var(--modal-margin-x);
-  padding-top: var(--modal-margin-y);
-  padding-bottom: var(--modal-margin-y);
+  padding-top: var(--modal-margin-top);
+  padding-bottom: var(--modal-margin-bottom);
+  padding-left: var(--modal-margin-left);
+  padding-right: var(--modal-margin-right);
   overflow: auto;
   overscroll-behavior: contain;
   -webkit-overflow-scrolling: touch;
@@ -107,7 +112,10 @@ html.modal_active body {
   width: 100%;
   max-width: 80rem;
   margin: auto;
-  padding: var(--modal-padding);
+  padding-top: var(--modal-padding-top);
+  padding-bottom: var(--modal-padding-bottom);
+  padding-left: var(--modal-padding-left);
+  padding-right: var(--modal-padding-right);
   text-align: left;
   background: var(--modal-background);
   box-shadow: var(--modal-box-shadow);
@@ -127,7 +135,7 @@ html.modal_active body {
     display: block;
     position: sticky;
     z-index: 10040;
-    top: calc(var(--modal-closer-margin) - var(--modal-margin-y));
+    top: calc(var(--modal-closer-margin) - var(--modal-margin-top));
     background: var(--modal-background);
     width: var(--modal-closer-area);
     height: var(--modal-closer-area);
